cluster/homelab/apps/external/gitlab-webui/endpoint.yaml
kind: Endpoints
apiVersion: v1
metadata:
  name: gitlab
  namespace: external
subsets:
  - addresses:
    - ip: 10.27.10.24
    ports:
      - name: gitlab-port
        protocol: TCP
        port: 80
