cluster/homelab/apps/external/gitlab-webui/ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: gitlab-ingress
  namespace: external
  annotations:
    kubernetes.io/ingress.class: traefik-external
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`gitlab.opryga.com`)
      kind: Rule
      middlewares:
        - name: default-headers
          namespace: traefik
      services:
        - name: gitlab
          port: 80
  tls:
    secretName: opryga-com-tls
